html - example change

--- a/example/HelloWorld/App/index.html
+++ b/example/HelloWorld/App/index.html
@@ -1,8 +1,8 @@
-<Activity>
+<Activity action="main">
     <TextView id="rube">Hello World!</TextView>
 </Activity>
 <script>
-    Rayna.run(function () {
-        Rayna.view("#rube").text('hello world');
+    Rayna.run("index", function () {
+        Rayna.log(1);
     });
 </script>
