demo - ignore and example change

--- a/example/HelloWorld/App/index.html
+++ b/example/HelloWorld/App/index.html
@@ -1,14 +1,13 @@
 <Activity action="main" title="hello world test">
-    <TextView id="rube" onClick="goToIndex2">Hello World!</TextView>
+    <TextView id="rube" onclick="goToIndex()">Hello World!</TextView>
 </Activity>
 <script module="index" action="main">
     R.run("index", function () {
         R.log('index');
     });
 
-    function goToIndex2(){
-        R.runTo("index2", function () {
-            R.log('index2');
-        });
+    function goToIndex() {
+        R.log('index2');
     }
 </script>
+
