--- a/example/HelloWorld/App/index.html
+++ b/example/HelloWorld/App/index.html
@@ -1,12 +1,9 @@
 <Activity action="main" title="hello world test">
-    <TextView id="rube" onclick="goToIndex()">
-        <TextView class="rube" onclick="goToIndex()">Hello World!</TextView>
-        Hello World!</TextView>
+    <TextView id="rube" onclick="goToIndex()">Hello World!</TextView>
 </Activity>
 <script module="index" action="main">
     R.run("index", function () {
         R.log('index');
-        R.log(R.$('textview .rube'));
     });
 
     function goToIndex() {
